--- a/frontendAdminPanel.html
+++ b/frontendAdminPanel.html
@@ -144,7 +144,7 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script type="text/babel">
         const { useState, useEffect, useRef } = React;
-        const API_BASE_URL = 'http://localhost:8080';
+        const API_BASE_URL = 'http://codeigniter4.localhost';
         const BANNERS_ENDPOINT = '/api/banner';
 
         axios.defaults.withCredentials = false;
