--- a/bannerWithEmbedScript.html
+++ b/bannerWithEmbedScript.html
@@ -6,6 +6,8 @@
 </head>
 
 <body>
+    <script src="http://codeigniter4.localhost/js/banner-widget.js"></script>
+
     <script>
         window.bannerWidgetConfig = {
             containerId: 'banner-container',
@@ -13,7 +15,6 @@
             rotationInterval: 1000
         };
     </script>
-    <script src="http://localhost:8080/js/banner-widget.js"></script>
 </body>
 
 </html>
